// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addResolveFunctionsToSchema Works for basic schema 1`] = `
Object {
  "data": Object {
    "simpleInt": 0,
  },
}
`;

exports[`addSubscriptionChannelsToSchema Should work on simple example 1`] = `
Object {
  "done": false,
  "value": Object {
    "data": Object {
      "simpleInt": 0,
    },
  },
}
`;
